<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvFName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tvLName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/tvStAddr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/tvCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/tvState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/tvZip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/etFName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fName_input_hint"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/etLName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lName_input_hint"
        android:textSize="14sp"/>
    <EditText
        android:id="@+id/etStAddr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addr_input_hint"
        android:textSize="14sp"/>
    <EditText
        android:id="@+id/etCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city_input_hint"
        android:textSize="14sp"/>
    <EditText
        android:id="@+id/etState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/state_input_hint"
        android:textSize="14sp"/>
    <EditText
        android:id="@+id/etZip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zip_input_hint"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/btGetInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Proceed"
        android:onClick="onClick"/>

</LinearLayout>